# rust_webpage

./: .env  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
.sqlx/: query-009b22bf45ed8eab0f3026fdd652a164eefeb4928f771e5a8bdb617381f8791c.json  query-0677e4a64d4514101803117a345b189a39d012e693f5e37442aac8f08190fe3f.json  query-11ee49069788f18e23624ea238cba30c8113c8455b61d49135c9ad2309b92fa2.json  query-57e43570a5ecaa0e404f9b47f31acd90f16e5834db5a061aaada9e1f3a480201.json  query-7609165d94c8f1bea9d535b9b7ad727fd06592973d7f83017292d41acb203be6.json  query-96314ef0569a4fb7dd738de1707b27ea2e1b9501b937bbc5e16cd65f6b5b84f5.json  query-9d00617966f8aeebb08de6ad981dc3b8697c65f0b23cea4684f525732d8f6706.json  query-aed2a9e11b33845efa5aefd6a5d2ddba6ac94465f61bebf65bf6ce407d8ccd78.json  query-c742761a7df4dc9dd3bb204d5a8c86215850c66480eb7baabc2958642f56c870.json
assets/: index.css  style.css  users.css
docker/: docker-compose.yml
migrations/2023-11-06-192030_create_users/: up.sql
migrations/2023-11-14-210521_sessions/: up.sql
migrations/2023-11-21-212340_permission/: down.sql  up.sql
migrations/2023-11-21-212737_user_groups/: down.sql  up.sql
src/: main.rs  site.rs
src/api/: auth.rs  hashes.rs  mod.rs
src/auth/: mod.rs
src/database/: actions.rs  mod.rs  models.rs  schema.rs
src/front/: auth.rs  mod.rs  site.rs  users.rs
src/types/: mod.rs
templates/: base.html  index.html  map.html  style.css  test.html  users.html
templates/auth/: auth_base.html  index.html  login.html  register.html
