[package]
name = "rustfun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = { version = "0.3.0", features = ["serde-json", "markdown"] }
async-trait = "0.1.74"
axum = "0.6.20"
axum-login = "0.8.0"
axum-macros = "0.3.8"
base64 = "0.21.5"
bcrypt = { version = "0.15.0 "}
const_format = "0.2.32"
diesel = { version = "2.1.3", features = ["postgres"] }
dotenv_codegen = "0.15.0"
rand = { version = "0.8.5"}
serde = { version = "1.0.189", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio-rustls"]}
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-default-headers = "0.1.1"
tower-http = { version = "0.4.4", features = ["auth", "fs", "limit", "trace"] }
tower-sessions = { version = "0.5.0", features = ["postgres-store"] }
# axum_session = { version = "0.9", features = ["postgres-rustls"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
